--- a/package.json
+++ b/package.json
@@ -1,27 +1,17 @@
 {
-  "name": "webchatpush",
+  "name": "vapid-sample",
   "version": "1.0.0",
-  "description": "package file",
-  "main": "app.js",
-  "dependencies": {
-    "botbuilder": "^3.7.0",
-    "restify": "^4.3.0"
-  },
-  "devDependencies": {},
+  "description": "",
+  "main": "bot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/doristchen/WebChatPush.git"
-  },
-  "keywords": [
-    "bot"
-  ],
-  "author": "Doris Chen",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/doristchen/WebChatPush/issues"
-  },
-  "homepage": "https://github.com/doristchen/WebChatPush#readme"
+  "dependencies": {
+    "botbuilder": "^3.7.0",
+    "restify": "^4.3.0",
+    "web-push": "^3.2.2"
+  }
 }
