--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "botbuilder": "^3.7.0",
+    "express": "^4.15.3",
+    "https": "^1.0.0",
+    "node-cmd": "^3.0.0",
+    "request": "^2.81.0",
     "restify": "^4.3.0",
     "web-push": "^3.2.2"
   }
